--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="page">
         <div class="title">PARROT CARD GAME</div>
         <div class="cards">
-            <div class="card">
-                <div class="front-face face"><img src="./imagens/front 12.png"></div>
-                <div class="back-face face"><img src="./imagens/bobrossparrot.gif"></div>
+            <div onclick="turncard(this)" class="card">
+                <div class="l1 face"><img src="./imagens/front 12.png"></div>
+                <div class="l2 back-face face"><img class=img src="./imagens/bobrossparrot.gif"></div>
             </div>
         </div>
     </div>
