Vesão com lista e limite de cartas

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
     <div class="page">
         <div class="title">PARROT CARD GAME</div>
-        <div class="cards">
-            <div onclick="turncard(this)" class="card">
+        <ul class="cards">
+            <li onclick="turncard(this)" class="card">
                 <div class="l1 face"><img src="./imagens/front 12.png"></div>
                 <div class="l2 back-face face"><img class=img src="./imagens/bobrossparrot.gif"></div>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
     <script src="./script.js"></script>
 </body>
