Versão final com timer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <div class="page">
         <div class="title">PARROT CARD GAME</div>
+        <div class="time" data-test="timer"></div>
         <ul class="cards">
            
         </ul>
