Versão final testando o avaliador

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="page">
         <div class="title">PARROT CARD GAME</div>
         <div class="time" data-test="timer"></div>
-        <ul class="cards">
+        <div class="cards">
            
-        </ul>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
